force-app/main/default/objects/Offerings_Contract_Term__c/Offerings_Contract_Term__c.object-meta.xml
<CustomObject>
    <label>Offerings Contract Term</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Offerings Contract Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerings Contract Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>