force-app/main/default/objects/Offerings_Contract_Term__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <formula>Offerings__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Name</label>
    <type>Text</type>
</CustomField>