force-app/main/default/objects/Offerings_Contract_Term__c/fields/Contract_General_Content__c.field-meta.xml
<CustomField>
    <fullName>Contract_General_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Product Verbiage</label>
    <referenceTo>Contract_Terms__c</referenceTo>
    <relationshipLabel>Offerings Contract Terms</relationshipLabel>
    <relationshipName>Offerings_Contract_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>