force-app/main/default/objects/Offerings_Contract_Term__c/fields/Offerings__c.field-meta.xml
<CustomField>
    <fullName>Offerings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offerings</label>
    <referenceTo>Offerings__c</referenceTo>
    <relationshipLabel>Offerings Contract Terms</relationshipLabel>
    <relationshipName>Offerings_Contract_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>