force-app/main/default/objects/Offerings_Contract_Term__c/fields/Require_Currency_Match__c.field-meta.xml
<CustomField>
    <fullName>Require_Currency_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires that the currency of the Contract matches the currency of the Contract Product Verbiage.</description>
    <label>Require Currency Match</label>
    <type>Checkbox</type>
</CustomField>