force-app/main/default/objects/Offerings_Contract_Term__c/fields/User_Selectable__c.field-meta.xml
<CustomField>
    <fullName>User_Selectable__c</fullName>
    <formula>Offerings__r.User_Selectable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Selectable</label>
    <type>Checkbox</type>
</CustomField>