force-app/main/default/objects/Offerings_Contract_Term__c/listViews/All_CxTs.listView-meta.xml
<ListView>
    <fullName>All_CxTs</fullName>
    <columns>NAME</columns>
    <columns>Contract_General_Content__c</columns>
    <columns>Offerings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CxTs</label>
    <language>en_US</language>
</ListView>